--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main>
         <section id="chi-sono">
             <h2>Chi Sono</h2>
-            <p>Ciao sono S\ofia, e non vorrei essere qui...</p>
+            <p>Ciao sono Sofia, e non vorrei essere qui...</p>
         </section>
         <section id="competenze">
             <h2>Le Mie Competenze</h2>
