--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <ul>
                 <li>HTML</li>
                 <li>CSS (non in apprendimento)</li>
-                <li>JavaScript (in apprendimento)</li>
+                <li>JavaScript (forse in apprendimento)</li>
             </ul>
         </section>
         <section id="contatti">
